# blender-print-studio

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.claude/commands/: print.md
addon/: addon.py
config/: claude_code_mcp.json
docs/: setup-guide.md  tools-reference.md
src/blender_print_studio/: __init__.py  blender_conn.py  server.py
