[project]
name = "blender-print-studio"
version = "0.1.0"
description = "Blender MCP server for 3D printing workflows — scene control + print-ready STL export"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
blender-print-studio = "blender_print_studio.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blender_print_studio"]
